refactoring & fixed reset input button for product details

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="eShop Nigeria the #1 Online store in Nigeria - Shop Online for All Kinds of Products & Enjoy Great Prices, Deals And Offers ✓ Best prices in Nigeria ✓ Online shop you can trust ✓ Order now and enjoy pay on delivery!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>eShop Nigeria | Online Store for all kinds of Products & Services!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
